# firehose-batcher

./: BUILD  Gopkg.toml  WORKSPACE  batch.go  firehose_batcher.go  firehose_batcher_test.go  limits.go  main.go  metrics.go
cmd/log2firehose/: BUILD.bazel  main.go
